# agents-api

./: .gitignore  Makefile  go.mod  go.sum
.github/workflows/: e2e-k8s-sdk.yaml  schema-update.yaml
agents/crds/: agents.kruise.io_sandboxsets.yaml  agents.kruise.io_sandboxtemplates.yaml
agents/v1alpha1/: sandboxclaim_types.go
clients/codegen/: patch_java_types.py  patch_python_types.py  type_mapping.yaml
clients/java/: pom.xml
clients/python/: ruff.toml
clients/python/openkruise/: pyproject.toml
clients/python/openkruise/agents/: __init__.py  sandbox_claim_client.py  sandbox_client.py  sandboxset_client.py
clients/python/openkruise/agents/models/: __init__.py  checkpoint.py  sandbox.py  sandboxclaim.py  sandboxset.py  sandboxtemplate.py  sandboxupdateops.py
clients/python/openkruise/test/: __init__.py  conftest.py  helpers.py  test_checkpoint.py  test_sandbox.py  test_sandboxclaim.py  test_sandboxset.py  test_sandboxtemplate.py  test_sandboxupdateops.py
docs/: sdk-codegen-zh_CN.md  sdk-codegen.md
examples/create-update-delete-sandboxclaim/: go.mod  go.sum  main.go  test.yaml
examples/sandboxclaim-example/: go.mod  go.sum
hack/: generate_client.sh  generate_java_sdk.sh  generate_python_sdk.sh  patch_sdk_types.sh  run-k8s-sdk-e2e-test.sh  update_upstream.sh
sdk/: README.md  README_zh-CH.md
sdk/runtime/: client.go  command_handle.go  commands.go  config.go  filesystem.go  k8s.go
sdk/sandbox/: config.go  sandbox.go  sandbox_api.go
test/e2e/: checkpoint_test.go  e2e_suite_test.go  sandbox_test.go  sandboxclaim_test.go  sandboxset_test.go  (+2 more)
(+177 files in other folders)
